[gd_scene load_steps=7 format=3 uid="uid://dw0a548x80dw5"]

[ext_resource type="Script" path="res://Scenes/enemies/scout.gd" id="1_31egl"]
[ext_resource type="Texture2D" uid="uid://dg6w7r353bqbs" path="res://graphics/enemies/scout.png" id="1_n3tia"]
[ext_resource type="Shader" path="res://Scenes/enemies/scout.gdshader" id="2_bscqr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_urlui"]
shader = ExtResource("2_bscqr")
shader_parameter/color = Color(0.800335, 0.682698, 0, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1tk66"]
radius = 48.0416

[sub_resource type="CircleShape2D" id="CircleShape2D_sxgw2"]
radius = 733.655

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_31egl")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_urlui")
position = Vector2(40, 25)
rotation = 1.5708
texture = ExtResource("1_n3tia")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("CircleShape2D_1tk66")

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_sxgw2")

[node name="LaserSpawnPositions" type="Node2D" parent="."]
visible = false

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(110, -32)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(121, 11)

[node name="Timers" type="Node" parent="."]

[node name="LaserCooldown" type="Timer" parent="Timers"]

[node name="InvulnerabilityCooldown" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="Timers/InvulnerabilityCooldown" to="." method="_on_invulnerability_cooldown_timeout"]
